# gerenciador-gmud-backend

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci-self-hosted.yml
src/: main.rs  routes.rs
src/auth/: dtos.rs  extractor.rs  handlers.rs  mod.rs  services.rs
src/config/: db.rs  mod.rs
src/errors/: api_error.rs  mod.rs
src/gmud/: dtos.rs  handlers.rs  mod.rs  models.rs  repository.rs  services.rs
src/shared/: api_response.rs  mod.rs
src/user/: dtos.rs  handlers.rs  mod.rs  models.rs  services.rs
