[package]
name = "gerencia-gmud-backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
mongodb = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "2"
validator = { version = "0.20", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
jsonwebtoken = "9"
bcrypt = "0.16"
uuid = { version = "1", features = ["v4"] }
